working on paper introduction

--- a/paper/ldpcGpuTegra.tex
+++ b/paper/ldpcGpuTegra.tex
@@ -146,15 +146,18 @@ In microarchitectures, increasing clock frequencies to obtain faster processing 
 Mainly due to the demands for visualization technology in the gaming industry, the performance of graphics processing units (GPUs) has significantly improved over the last decade. With many cores driven by a considerable memory bandwidth, recent GPUs are targeted for solving computationally intensive algorithms in a multithreaded and highly parallel fashion. Hence, researchers in the high-performance computing field are applying GPUs to general-purpose applications (GPGPU) \cite{art_gpu_0,art_cuda_openmp, art_memory_coalesced, art_ldpc_OpenCl, art_optimize_0, art_layered1}. Pertaining to the field of communication, researchers have used Compute Unified Device Architecture (CUDA) from NVIDIA \cite{website_cuda} and Open Computing Language (OpenCL) platforms to develop LDPC decoders on GPUs.
 
 %ARMs and NEON
-Due to large computing capacity of multicore devices, software based LDPC decoders have met the required throughputs of communication standards, although power consumption of x86 and GPU devices is incompatible with most of embedded systems \cite{art_neon}. To solve this issue, ARM-based SDR systems have been prposed in recent years \cite{art_neon, art_ldpc_cpu0, art_ldpc_OpenCl_1} with the goal to develop an SDR based LDPC decoder that provides high throughput and low latency on a low-power embedded system. The authors in \cite{art_neon} have used ARM processor's SIMD and SIMT programming models to implement a LDPC decoder that is based on parallel decoding of data frames. This approach allows reaching high throughput while maintaining low-latency. However, the proposed ARM based solution in \cite{art_neon}, is based on the assumption that the ARM processor is solely used for LDPC decoding and does not take advantage of the available GPU processing on mobile device. Due to restrictions in an embedded system, using all resources of the system is a crucial task. Recent works in SDR LDPC embedded systems are missing the fact that todays mobile devices have powerful CUDA enabled GPUs. This paper has prposed a new algorithm that exploits ARM NEON SIMD Units and GPU together to reach a high throughput, low latency LDPC decoder. The main specification of the algorithm is that is devides processing task between system's resources. 
+Due to large computing capacity of multicore devices, software based LDPC decoders have met the required throughputs of communication standards, although power consumption of x86 and GPU devices is incompatible with most of embedded systems \cite{art_neon}. To solve this issue, ARM-based SDR systems have been prposed in recent years \cite{art_neon, art_ldpc_cpu0, art_ldpc_OpenCl_1} with the goal to develop an SDR based LDPC decoder that provides high throughput and low latency on a low-power embedded system. The authors in \cite{art_neon} have used ARM processor's SIMD and SIMT programming models to implement a LDPC decoder that is based on parallel decoding of data frames. This approach allows reaching high throughput while maintaining low-latency. However, the proposed ARM based solution in \cite{art_neon}, is based on the assumption that the ARM processor is solely used for LDPC decoding and does not take advantage of the available GPU processing on mobile device. Since mobile devices need to support multiple applications, the resources on the ARM processor must be better managed and cannot be all dedicated to the LDPC decoder. Moreover, recent works in SDR LDPC embedded systems are missing the fact that today mobile devices have powerful CUDA enabled GPUs.
 
-\section{LDPC codes and their Decoding Processes}
+%Contributions
+The contributions of this paper are twofold. First, it proposes an LDPC decoder for an embedded device which exploits ARM SIMD Units and GPU of the device together. This allows these resources to also support other applications on a mobile device. Second, as a consequence of this, by using the GPU of a mobile device, less memory from ARM processor is being used which is typically limited in an embedded system. The remainder of the paper is structured as follows. Section \ref{sec2} briefly  introduces the LDPC code family and its decoding algorithms. Then the proposed heterogeneous algorithm on embedded targets is described in Section \ref{sec3}.
+
+\section{LDPC codes and their Decoding Processes}\label{sec2}
 
 Many works as in \cite{art_massively, art_ldpc_cpu0,art_ldpc_OpenCl_1,art_gpu_0} focused on mapping LDPC decoders on multicore architectures. Most of these works are based on the standard Two-Phase Message Passing (TPMP) schedule described in \cite{art_massively}. This algorithm works in two phases. In the first phase, all the variable nodes send messages to their neighboring parity check nodes, and in the second phase the parity check nodes send messages to their neighboring variable nodes. Due to transcendental operations and relying of Sum-Product algorithm to the estimation of noise standard deviation, in practice Min-Sum (MS) variants are prefered by designers \cite{art_neon}. More efficient layered schedules, such horizontal layered-based decoding algorithm, allow updated information to be utilized more quickly in the algorithm thus speeding up the decoding\cite{art_layered0, art_layered1}. In fact, the parity check matrix can be viewed as a layered graph decoded sequentially. The work in \cite{art_gpu_0} has applied a form of layered belief propogation to irregular LDPC codes to reach 2x faster convergence in a given error rate.By using this method they have reduced memory bits usage by 45-50\%. The major limitation of layered algorithm is its irregular memory access although it is composed of a single loop kernel compared to two sequential kernels in standard algorithms. To solve the irregular memory access a data interleaving/deinterleaving process is being used before and after the decoding process \cite{art_gpu_0, art_neon}.
 
 In this paper the interleaving/deinterleaving process is done ny using ARM Vector processing units and frame decoding is being done in GPU of a mobile device.
 
-\section{Parallel Frame Processing}
+\section{Parallel Frame Processing} \label{sec3}
 The porposed LDPC decoder is implemented on Jetson TK1 SoCs which contains 4 Cortex-A15 processors. Each core includes a NEON SIMD unit. To achieve high throughput performance on such low-power embedded processors, the following programming model is exploited in the proposed LDPC decoder.
 
 \begin{figure}[h]
